[package]
name = "glass_pumpkin"
version = "1.3.0"
description = "A cryptographically secure prime number generator based on rust's own num-bigint and num-integer"
keywords = ["prime", "big", "cryptography", "generator", "number"]
license = "Apache-2.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
repository = "https://github.com/mikelodder7/glass_pumpkin"
documentation = "https://docs.rs/glass_pumpkin"
homepage = "https://crates.io/crates/glass_pumpkin"
readme = "README.md"
edition = "2021"

[dependencies]
core2 = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = { version = "0.8", default-features = false }
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = { version = "0.8", default-features = true }

[[bench]]
name = "gen_safe_prime"
harness = false

[profile.bench]
opt-level = 3
